--- a/backend/docker-compose.testing-template.yml
+++ b/backend/docker-compose.testing-template.yml
@@ -1,6 +1,7 @@
 services:
-  auth:
+  service:
     image: cr.yandex/crpe9kgeql1v6b7gujfj/{{SERVICE_NAME}}-testing:{{SERVICE_VERSION}}
+    restart: always
     env_file:
       - /tmp/secrets.env
     environment:
