--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -36,11 +36,10 @@ jobs:
       - uses: ./.github/actions/codegen
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.64.7
+          version: latest
           working-directory: backend/auth
-          args: --timeout=3m
 
   test:
     runs-on: ubuntu-latest
