--- a/.github/workflows/matcher-backend-release.yml
+++ b/.github/workflows/matcher-backend-release.yml
@@ -18,11 +18,10 @@ jobs:
       - uses: ./.github/actions/codegen
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v7
         with:
-          version: v1.64.7
+          version: latest
           working-directory: backend/matcher
-          args: --timeout=3m
 
   test:
     runs-on: ubuntu-latest
