--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -24,7 +24,20 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  codegen:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/codegen
+      - name: Upload codegen results
+        uses: actions/upload-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
+
   lint:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 5
     defaults:
@@ -33,7 +46,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
@@ -42,6 +59,7 @@ jobs:
           working-directory: backend/auth
 
   test:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -50,10 +68,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: Run tests with coverage
-        run: MIGRATIONS_PATH=${{ github.workspace }}/backend/auth/migrations go test ./... -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
+        run: BASE_MIGRATIONS_PATH=${{ github.workspace }}/backend go test ./... -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
@@ -65,6 +87,7 @@ jobs:
           verbose: true
 
   build:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -73,7 +96,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: Build Docker image
         run: docker build -t auth_service:latest . -f auth/prod.Dockerfile
