--- a/.github/workflows/matcher-backend.yml
+++ b/.github/workflows/matcher-backend.yml
@@ -26,7 +26,20 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  codegen:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/codegen
+      - name: Upload codegen results
+        uses: actions/upload-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
+
   lint:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 5
     defaults:
@@ -35,7 +48,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v7
@@ -44,6 +61,7 @@ jobs:
           working-directory: backend/matcher
 
   test:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -52,10 +70,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: Run tests with coverage
-        run: MIGRATIONS_PATH=${{ github.workspace }}/backend/matcher/migrations go test ./... -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
+        run: BASE_MIGRATIONS_PATH=${{ github.workspace }}/backend go test ./... -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
 
       - name: Upload coverage report to Codecov
         uses: codecov/codecov-action@v5
@@ -67,6 +89,7 @@ jobs:
           verbose: true
 
   build:
+    needs: codegen
     runs-on: ubuntu-latest
     timeout-minutes: 10
     defaults:
@@ -75,7 +98,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/codegen
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
 
       - name: Build Docker image
         run: docker build -t matcher_service:latest . -f matcher/prod.Dockerfile
