--- a/backend/auth/docker-compose.debug.yml
+++ b/backend/auth/docker-compose.debug.yml
@@ -1,7 +1,7 @@
 services:
   auth:
     build:
-      dockerfile: debug.Dockerfile
+      dockerfile: auth/debug.Dockerfile
     ports:
       - "40000:40000"
     security_opt:
