--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -19,3 +19,7 @@ database:
   password: pass
   database: auth
   options: sslmode=disable
+
+jwt:
+  secretKey: GBONX7AaWWslx5JVihS3q1xIMLhzqF3R3rD5cyPeygg=
+  tokenLifetime: 30m
