[COUPLY-27]: secrets reading from code

--- a/backend/auth/configs/testing.yaml
+++ b/backend/auth/configs/testing.yaml
@@ -13,3 +13,8 @@ database:
   port: 6432
   database: auth
   options: sslmode=verify-full&target_session_attrs=read-write&sslrootcert=/root/.postgresql/root.crt
+
+secrets:
+  ids:
+    db: e6qoug3fau0c6bhsj20i
+    token: e6qo9u8d7n70ciqo8omk
