--- a/backend/auth/configs/base.yaml
+++ b/backend/auth/configs/base.yaml
@@ -20,6 +20,6 @@ database:
   database: auth
   options: sslmode=disable
 
-jwt:
-  secretKey: GBONX7AaWWslx5JVihS3q1xIMLhzqF3R3rD5cyPeygg=
-  tokenLifetime: 30m
+phone-confirmation:
+  length: 6
+  expirationTime: 1m
