--- a/.github/workflows/matcher-backend-release.yml
+++ b/.github/workflows/matcher-backend-release.yml
@@ -133,7 +133,9 @@ jobs:
 
   deploy-testing:
     runs-on: ubuntu-latest
-    needs: migrate-testing-up
+    needs:
+      - migrate-testing-up
+      - build-testing
     timeout-minutes: 20
     defaults:
       run:
