[COUPLY-21] implement photo upload and download

--- a/backend/matcher/configs/base.yaml
+++ b/backend/matcher/configs/base.yaml
@@ -20,5 +20,8 @@ database:
   database: matcher
   options: sslmode=disable
 
-user-token:
-  secretKey: GBONX7AaWWslx5JVihS3q1xIMLhzqF3R3rD5cyPeygg=
+s3:
+  endpoint: s3:9000
+  accessKey: minio
+  secretKey: minio123
+  bucket: profile-photos
