--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,6 +15,16 @@ services:
     ports:
       - "5432:5432"
 
+  s3:
+    image: minio/minio:latest
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    command: server /data --console-address ":9001"
+
   matcher:
     build:
       context: .
