Simplify infra and implement push sender

--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -1,14 +1,11 @@
 name: Auth Service CI/CD
 
-permissions:
-  actions: read
-  contents: read
-
 on:
   pull_request:
     branches: ["main"]
     paths:
       - 'backend/auth/**'
+      - 'backend/common/**'
       - '.github/workflows/auth-backend.yml'
       - '.github/actions/codegen/**'
 
@@ -18,83 +15,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  codegen:
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./.github/actions/codegen
-      - name: Upload codegen results
-        uses: actions/upload-artifact@v4
-        with:
-          name: codegen-output
-          path: backend
-
-  lint:
-    needs: codegen
-    runs-on: ubuntu-latest
-    timeout-minutes: 5
-    defaults:
-      run:
-        working-directory: backend/auth
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download codegen results
-        uses: actions/download-artifact@v4
-        with:
-          name: codegen-output
-          path: backend
-
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v7
-        with:
-          version: latest
-          working-directory: backend/auth
-
-  test:
-    needs: codegen
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: backend/auth
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download codegen results
-        uses: actions/download-artifact@v4
-        with:
-          name: codegen-output
-          path: backend
-
-      - name: Run tests with coverage
-        run: BASE_MIGRATIONS_PATH=${{ github.workspace }}/backend go test ./... -race -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
-
-      - name: Upload coverage report to Codecov
-        uses: codecov/codecov-action@v5
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          slug: ${{ github.repository }}
-          files: ./backend/auth/coverage.txt
-          fail_ci_if_error: false
-          verbose: true
-
-  build:
-    needs: codegen
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: backend
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download codegen results
-        uses: actions/download-artifact@v4
-        with:
-          name: codegen-output
-          path: backend
-
-      - name: Build Docker image
-        run: docker build -t auth_service:latest . -f auth/prod.Dockerfile
+  ci:
+    uses: ./.github/workflows/backend-service-ci.yml
+    with:
+      service_name: auth
+    secrets: inherit
