--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -28,7 +28,9 @@ services:
   matcher:
     build:
       context: .
-      dockerfile: matcher/dev.Dockerfile
+      dockerfile: testing.Dockerfile
+      args:
+        service: matcher
     environment:
       APP_ENV: dev
       CONFIGS_PATH: /app/configs
@@ -44,7 +46,9 @@ services:
   auth:
     build:
       context: .
-      dockerfile: auth/dev.Dockerfile
+      dockerfile: testing.Dockerfile
+      args:
+        service: auth
     environment:
       APP_ENV: dev
       CONFIGS_PATH: /app/configs
@@ -55,6 +59,26 @@ services:
     ports:
       - "8080:8080"
       - "9090:9090"
+    depends_on:
+      db:
+        condition: service_healthy
+
+  notificator:
+    build:
+      context: .
+      dockerfile: testing.Dockerfile
+      args:
+        service: notificator
+    environment:
+      APP_ENV: dev
+      CONFIGS_PATH: /app/configs
+    env_file:
+      - secrets.env
+    volumes:
+      - ./notificator/swagger/api:/app/swagger-ui/api
+    ports:
+      - "8081:8081"
+      - "9091:9091"
     depends_on:
       db:
         condition: service_healthy
