--- a/backend/matcher/docker-compose.debug.yml
+++ b/backend/matcher/docker-compose.debug.yml
@@ -1,7 +1,7 @@
 services:
   matcher:
     build:
-      dockerfile: matcher/debug.Dockerfile
+      dockerfile: debug.Dockerfile
     ports:
       - "40000:40000"
     security_opt:
