--- a/backend/blocker/docker-compose.debug.yml
+++ b/backend/blocker/docker-compose.debug.yml
@@ -1,7 +1,7 @@
 services:
   blocker:
     build:
-      dockerfile: blocker/debug.Dockerfile
+      dockerfile: debug.Dockerfile
     ports:
       - "40000:40000"
     security_opt:
