--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -25,6 +25,24 @@ services:
       MINIO_ROOT_PASSWORD: minio123
     command: server /data --console-address ":9001"
 
+  blocker:
+    build:
+      context: .
+      dockerfile: testing.Dockerfile
+      args:
+        service: blocker
+    environment:
+      APP_ENV: dev
+      CONFIGS_PATH: /app/configs
+    env_file:
+      - secrets.env
+    ports:
+      - "7003:7003"
+      - "7004:7004"
+    depends_on:
+      db:
+        condition: service_healthy
+
   matcher:
     build:
       context: .
