--- a/.github/workflows/backend-service-release.yml
+++ b/.github/workflows/backend-service-release.yml
@@ -77,10 +77,44 @@ jobs:
 #      - name: Run functional tests
 #        run: echo "Running functional tests"
 
+  build-testing:
+    needs:
+      - codegen
+      - test-unit
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    defaults:
+      run:
+        working-directory: backend
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Download codegen results
+        uses: actions/download-artifact@v4
+        with:
+          name: codegen-output
+          path: backend
+
+      - name: Set release version
+        run: echo "RELEASE_VERSION=${{ github.run_number }}" >> $GITHUB_ENV
+
+      - name: Setup yc
+        run: |
+          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
+          echo '${{ secrets.YC_SERVICE_KEY }}' > sa-key.json
+          /opt/yc/bin/yc config set folder-id b1ggapscf0p06cohndtt
+          /opt/yc/bin/yc config set service-account-key sa-key.json
+
+      - name: Login docker
+        run: |
+          echo $(/opt/yc/bin/yc iam create-token)|docker login --username iam --password-stdin cr.yandex
+
+      - name: Build Docker image
+        run: docker build --build-arg service=${{ inputs.service_name }} -t cr.yandex/crpe9kgeql1v6b7gujfj/${{ inputs.service_name }}-testing:${{ env.RELEASE_VERSION }} --push . -f testing.Dockerfile
+
   migrate-testing-up:
     runs-on: ubuntu-latest
-    needs:
-      - test-unit
+    needs: build-testing
     if: ${{ inputs.needs_migrations }}
     timeout-minutes: 10
     defaults:
@@ -117,44 +151,10 @@ jobs:
       - name: Success
         run: echo "migrated"
 
-  build-testing:
-    needs: codegen
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: backend
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Download codegen results
-        uses: actions/download-artifact@v4
-        with:
-          name: codegen-output
-          path: backend
-
-      - name: Set release version
-        run: echo "RELEASE_VERSION=${{ github.run_number }}" >> $GITHUB_ENV
-
-      - name: Setup yc
-        run: |
-          curl -sSL https://storage.yandexcloud.net/yandexcloud-yc/install.sh | bash -s -- -i /opt/yc -n
-          echo '${{ secrets.YC_SERVICE_KEY }}' > sa-key.json
-          /opt/yc/bin/yc config set folder-id b1ggapscf0p06cohndtt
-          /opt/yc/bin/yc config set service-account-key sa-key.json
-
-      - name: Login docker
-        run: |
-          echo $(/opt/yc/bin/yc iam create-token)|docker login --username iam --password-stdin cr.yandex
-
-      - name: Build Docker image
-        run: docker build --build-arg service=${{ inputs.service_name }} -t cr.yandex/crpe9kgeql1v6b7gujfj/${{ inputs.service_name }}-testing:${{ env.RELEASE_VERSION }} --push . -f testing.Dockerfile
-
   deploy-testing:
     runs-on: ubuntu-latest
     needs:
       - migrate-testing-up
-      - build-testing
     timeout-minutes: 20
     defaults:
       run:
