Add CI success jobs to workflows for consistent checks
Introduced a `ci-success` job across multiple workflows to confirm all required checks have passed. Additionally, created a shared `stub.yml` workflow for a generic check on pull requests targeting the `main` branch

--- a/.github/workflows/matcher-backend.yml
+++ b/.github/workflows/matcher-backend.yml
@@ -21,3 +21,12 @@ jobs:
       service_name: matcher
       additional_paths: 'backend/auth/pkg/**'
     secrets: inherit
+
+  ci-success:
+    name: CI success
+    needs:
+      - ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: Success
+        run: echo "All required checks passed!"
