--- a/.github/workflows/blocker-backend.yml
+++ b/.github/workflows/blocker-backend.yml
@@ -20,3 +20,12 @@ jobs:
     with:
       service_name: blocker
     secrets: inherit
+
+  ci-success:
+    name: CI success
+    needs:
+      - ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: Success
+        run: echo "All required checks passed!"
