--- a/.github/workflows/notificator-backend.yml
+++ b/.github/workflows/notificator-backend.yml
@@ -21,3 +21,12 @@ jobs:
     with:
       service_name: notificator
     secrets: inherit
+
+  ci-success:
+    name: CI success
+    needs:
+      - ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: Success
+        run: echo "All required checks passed!"
