[COUPLY-86] add task url

--- a/.github/workflows/close-task.yml
+++ b/.github/workflows/close-task.yml
@@ -21,6 +21,7 @@ jobs:
         uses: evrone-erp/yandex-tracker-action@v1.5.0
         with:
           token: ${{secrets.GITHUB_TOKEN}}
+          task_url: true
           yandex_org_id: ${{ secrets.YANDEX_ORG_ID }}
           yandex_oauth2_token: ${{ secrets.YANDEX_OAUTH2_TOKEN }}
 
