[COUPLY-86] add success check

--- a/.github/workflows/matcher-backend.yml
+++ b/.github/workflows/matcher-backend.yml
@@ -22,7 +22,7 @@ jobs:
       additional_paths: 'backend/auth/pkg/**'
     secrets: inherit
 
-  ci-success:
+  success:
     name: CI success
     needs:
       - ci
