--- a/.github/workflows/blocker-backend.yml
+++ b/.github/workflows/blocker-backend.yml
@@ -21,7 +21,7 @@ jobs:
       service_name: blocker
     secrets: inherit
 
-  ci-success:
+  success:
     name: CI success
     needs:
       - ci
