--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -103,7 +103,7 @@ jobs:
       - name: Check formatting
         run: npm run format:check
 
-  ci-success:
+  success:
     name: CI success
     needs:
       - build
