[COUPLY-86] Add CI success jobs to workflows for consistent checks (#38)
* Add CI success jobs to workflows for consistent checks

Introduced a `ci-success` job across multiple workflows to confirm all required checks have passed. Additionally, created a shared `stub.yml` workflow for a generic check on pull requests targeting the `main` branch

* fix shared workflows

* fix shared workflows

* [COUPLY-86] add task url

* [COUPLY-86] change trigger

* [COUPLY-86] add param

* [COUPLY-86] add transition

* [COUPLY-86] add success check

--- a/.github/workflows/auth-backend.yml
+++ b/.github/workflows/auth-backend.yml
@@ -9,7 +9,6 @@ on:
       - '.github/workflows/auth-backend.yml'
       - '.github/actions/codegen/**'
 
-# Cancel any in-progress job or run for the same branch/PR to save resources
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -20,3 +19,12 @@ jobs:
     with:
       service_name: auth
     secrets: inherit
+
+  success:
+    name: CI success
+    needs:
+      - ci
+    runs-on: ubuntu-latest
+    steps:
+      - name: Success
+        run: echo "All required checks passed!"
