[COUPLY-86] fix transition

--- a/.github/workflows/close-task.yml
+++ b/.github/workflows/close-task.yml
@@ -34,5 +34,5 @@ jobs:
           token: ${{secrets.GITHUB_TOKEN}}
           yandex_org_id: ${{ secrets.YANDEX_ORG_ID }}
           yandex_oauth2_token: ${{ secrets.YANDEX_OAUTH2_TOKEN }}
-          to: close
+          to: closed
           is_yandex_cloud_org: true
