--- a/.github/workflows/frontend-release.yml
+++ b/.github/workflows/frontend-release.yml
@@ -26,11 +26,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install
-
-      - name: Run tests
-        run: npm run test-storybook
+#      - name: Install Playwright browsers
+#        run: npx playwright install
+#
+#      - name: Run tests
+#        run: npm run test-storybook
 
       - name: Run ESLint
         run: npm run lint
